--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
 
     <h1>Projeto de Jogo do ColabEduc</h1>
+    <a href="https://jeftedan.github.io/constdivertida/">Meu primeiro jogo<\a>    
 
     </body>
 </html>
